--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,3 +1,5 @@
+@import "post-item/post-item-template.wxss";
+
 swiper {
   width: 100%;
   height: 500rpx;
@@ -18,65 +20,4 @@ swiper image {
     border-bottom: 1px solid #ededed;
     border-top: 1px solid #ededed;
     padding-bottom: 5px;
-}
-
-.post-author-date{
-    margin-top:10rpx;
-    margin-bottom: 20rpx;
-    margin-left: 10px;
-}
-
-.post-author{
-    width:60rpx;
-    height:60rpx;
-    vertical-align: middle;
-}
-
-.post-date{
-    margin-left: 20px;
-    vertical-align: middle;
-}
-
-.post-image{
-    width:100%;
-    height:340rpx;
-    margin:auto 0;
-    margin-bottom: 15px;
-}
-
-.post-date{
-    font-size:26rpx;
-    margin-bottom: 10px;
-}
-.post-title{
-    font-size:34rpx;
-    font-weight: 600;
-    color:#333;
-    margin-bottom: 10px;
-    margin-left: 10px;
-}
-.post-content{
-    color:#666;
-    font-size:28rpx;
-    margin-bottom:20rpx;
-    margin-left: 20rpx;
-    letter-spacing:2rpx;
-    line-height: 40rpx;
-}
-.post-like{
-    font-size:13px;
-    line-height: 16px;
-    margin-left: 10px;
-}
-
-.post-like-image{
-    height:16px;
-    width:16px;
-    margin-right: 8px;
-    vertical-align:middle;
-}
-
-.post-like-font{
-    vertical-align:middle;
-    margin-right: 20px;
 }
