--- a/pages/posts/post-item/post-item-template.wxss
+++ b/pages/posts/post-item/post-item-template.wxss
@@ -1,3 +1,14 @@
+.post-container{
+    flex-direction:column;
+    display:flex;
+    margin-top:20rpx;
+    margin-bottom:40rpx;
+    margin-left: 0rpx;
+    background-color:#fff;
+    border-bottom: 1px solid #ededed;
+    border-top: 1px solid #ededed;
+    padding-bottom: 5px;
+}
 
 .post-author-date{
     margin-top:10rpx;
