--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,14 +1,17 @@
 
 <!--先静后动，先样式在数据-->
 <view class="container">
-  <image class="head-image" src="/images/post/vr.png"></image>
+  <image class="head-image" src="{{headImgSrc}}"></image>
+
+<image src="/images/music/music-start.png" class="audio"></image>
+
   <view class="author-date">
-    <image class="avatar" src="/images/avatar/1.png"></image>
-    <text class="author">周杰伦</text>
+    <image class="avatar" src="{{avatar}}"></image>
+    <text class="author">{{author}}</text>
     <text class="const-text">发表于</text>
-    <text class="date">三天前</text>
+    <text class="date">{{dateTime}}</text>
   </view>
-  <text class="title">英雄联盟好玩么</text>
+  <text class="title">{{title}}</text>
   <view class="tool">
     <view class="circle-img">
       <image src="/images/icon/collection.png" ></image>
@@ -17,6 +20,5 @@
     <view class="horizon">
     </view>
   </view>
-  <text class="detail">用户本打算进行搜索，在进入页面时却被突如其来的模态抽奖框所打断；对于抽奖没有兴趣的用户是非常不友好的干扰； 而即便有部分用户确实被“诱人”的抽奖活动所吸引，离开主流程去抽奖之后可能就遗忘了原本的目标，进而失去了对产品真正价值的利用和认识。
-  </text>
+  <text class="detail">{{detail}}</text>
 </view>
