--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -4,7 +4,7 @@
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
-  <view class="usermotto" bindtap="bindViewTap">
+  <view class="usermotto" bindtap="onTap">
     <text class="user-motto">{{motto}}</text>
   </view>
 </view>
