--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,1 +1,9 @@
 @import "movie-list/movie-list-template.wxss";
+
+.container {
+  background-color: "#f2f2f2";
+}
+
+.movies-template{
+    margin-bottom: 20rpx;
+} 
