--- a/pages/movies/movie-list/movie-list-template.wxml
+++ b/pages/movies/movie-list/movie-list-template.wxml
@@ -4,7 +4,7 @@
   <view class="movie-list-container">
     <view class="inner-container">
       <view class="movie-head">
-        <text class="slogan">正在热映</text>
+        <text class="slogan">{{categoryTitle}}</text>
         <view class="more">
           <text class="more-text">更多</text>
           <image class="more-image" src="/images/icon/arrow-right.png"></image>
@@ -12,9 +12,12 @@
       </view>
     
     <view class="movies-container">
-      <template is="movieTemplate" />
-      <template is="movieTemplate" />
-      <template is="movieTemplate" />
+    <block wx:for="{{movies}}" wx:for-item="movie">
+     <template is="movieTemplate" data="{{...movie}}"/>
+
+    </block>
+      
+      <!--<template is="movieTemplate" />-->
     </view>
     </view>
   </view>
