--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -1,13 +1,12 @@
-<!--pages/movies/movie-grid/movie-grid-template.wxml-->
-<import src="../movie/movie-template.wxml"/>
-<template name="movieGridTemplate">
-<view class="grid-container">
 
+<!--pages/movies/movie-grid/movie-grid-template.wxml-->
+<import src="../movie/movie-template.wxml" />
+<template name="movieGridTemplate">
+  <scroll-view scroll-y="true" scroll-x="false" bindscrolltolower="onScrollToLower" class="grid-container" >
     <block wx:for="{{movies}}" wx:for-item="movie">
-    <view class="single-view-container">
-   
-        <template is = "movieTemplate" data = "{{...movie}}"/>
-         </view>
+      <view class="single-view-container">
+        <template is="movieTemplate" data="{{...movie}}" />
+        </view>
     </block>
-    </view>
+   </scroll-view>
 </template>
