--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -2,11 +2,11 @@
 <!--pages/movies/movie-grid/movie-grid-template.wxml-->
 <import src="../movie/movie-template.wxml" />
 <template name="movieGridTemplate">
-  <scroll-view scroll-y="true" scroll-x="false" bindscrolltolower="onScrollToLower" class="grid-container" >
+  <view class="grid-container">
     <block wx:for="{{movies}}" wx:for-item="movie">
       <view class="single-view-container">
         <template is="movieTemplate" data="{{...movie}}" />
-        </view>
+      </view>
     </block>
-   </scroll-view>
+  </view>
 </template>
