--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -2,7 +2,9 @@
 <!--pages/movies/movie-grid/movie-grid-template.wxml-->
 <import src="../movie/movie-template.wxml" />
 <template name="movieGridTemplate">
+  <text>搜索页面出来了</text>
   <view class="grid-container">
+   
     <block wx:for="{{movies}}" wx:for-item="movie">
       <view class="single-view-container">
         <template is="movieTemplate" data="{{...movie}}" />
