搜索界面数据绑定，音乐bug解决

--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -20,6 +20,6 @@
 
 <view class="search-panel" wx:if="{{searchPanelShow}}">
 
-<template is="movieGridTemplate"/>
+<template is="movieGridTemplate" data="{{...searchResult}}"/>
 
 </view>
