--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,4 +1,5 @@
 @import "movie-list/movie-list-template.wxss";
+@import "movie-grid/movie-grid-template.wxss"
 
 .container {
   background-color: "#f2f2f2";
