小程序基本完事

--- a/pages/movies/movie-detail/movie-detail.wxml
+++ b/pages/movies/movie-detail/movie-detail.wxml
@@ -50,7 +50,7 @@
   <view class="cast">
     <text class="cast-font"> 影人</text>
     <scroll-view class="cast-imgs" scroll-x="true" style="width:100%">
-      <block wx:for="{{movie.castsInfo}}" wx:for-item="item">
+      <block wx:for="{{movie.castsInfo}}" wx:key="movie.castsInfo" wx:for-item="item">
         <view class="cast-container">
           <image class="cast-img" src="{{item.img}}"></image>
           <text class="cast-name">{{item.name}}</text>
