--- a/pages/movies/movie-list/movie-list-template.wxml
+++ b/pages/movies/movie-list/movie-list-template.wxml
@@ -12,7 +12,7 @@
       </view>
     
     <view class="movies-container">
-    <block wx:for="{{movies}}" wx:for-item="movie">
+    <block wx:for="{{movies}}" wx:key="movies" wx:for-item="movie">
      <template is="movieTemplate" data="{{...movie}}"/>
 
     </block>
