--- a/pages/movies/movie/movie-template.wxml
+++ b/pages/movies/movie/movie-template.wxml
@@ -1,6 +1,6 @@
 <import src="../stars/stars-template.wxml"/>
 <template name="movieTemplate">
-<view class="movie-container" catchtap="onMovieTap" data-movieId="{{movieId}}">
+<view class="movie-container" catchtap="onMovieTap" data-movieId="{{movieId}}" data-movieTitle="{{title}}">
     <image class="movie-img" src="{{coverageUrl}}"></image>
     <text class="movie-title">{{title}}</text>
     <template is = "starsTemplate" data="{{stars:stars,score:average}}"/>
