--- a/pages/posts/post.wxml
+++ b/pages/posts/post.wxml
@@ -11,7 +11,7 @@
       <image data-postId = "0" src="/images/post/crab.png"></image>
     </swiper-item>
   </swiper>
-  <block wx:for="{{posts_key}}" wx:for-item="item" >
+  <block wx:for="{{posts_key}}" wx:key="posts_key"  wx:for-item="item" >
     <!--这里的idx  代表索引  item默认就有  所以去掉wx:for-item也是可以的-->
 
     <!--<view class="post-container">
